--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -42,8 +42,9 @@ category:
   num: true # 分类显示文章数
   sub: true # 开启多级分类
   sort:
+    - 读书
     - 工具
-    - 前端
+    - 大前端
     - 后端
     - 数据库
     - 运维
@@ -82,8 +83,10 @@ menu:
       url: https://github.com/yelog
       type: 3  # 跳转类型 3：打开新的tab页
 
+# 文末声明
+article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。可以在下面评论区评论，也可以邮件至 jaytp@qq.com
 
-bottom_text: ©2023 author
+bottom_text: ©2016-2020 Yelog
 # 自定义页面最下方的站点版权信息
 # 如果不填，则自定义为 ©2017 author (这个author为hexo根目录_config.yml中配置的)
 
@@ -94,10 +97,10 @@ miit:
   url: http://beian.miit.gov.cn/ # 默认链接为 http://beian.miit.gov.cn/
 
 
-reward: false
+reward: true
 # true 开启打赏功能
 
-searchAll: true
+searchAll: false
 # true 启用全文搜索
 # 开启此功能需要下面操作：
 # 1. 在 hexo 根目录 执行 npm install hexo-generator-search --save 安装插件
@@ -110,7 +113,7 @@ searchAll: true
 copyright: false
 # Copyright info. of post | 文末版权信息
 
-word_count: true
+word_count: false
 # true 开启字数统计
 # 开启此功能需要安装插件 ：在 hexo根目录 执行npm i hexo-wordcount --save
 
