--- a/_config.yml
+++ b/_config.yml
@@ -105,3 +105,7 @@ deploy:
   type: git
   repo: git@github.com:swag-lay/swag-lay.github.io.git
   branch: master
+
+search:
+   path: search.xml
+   field: post
