--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -11,15 +11,15 @@ blog_path: /
 link:
   theme: color # 链接样式，color: 彩色图标  white: 黑白图标
   items:
-    leetcode: https://leetcode.cn/
+    github: https://github.com/
 
 
 ##########多作者模式############
 author:
   on: false
   authors:
-    author1: 阁主
-    author2: 小马哥
+    author1: 
+    author2: 
 ##############################
 
 # 文章分类设置
@@ -139,7 +139,7 @@ blockquote: github
 # bracket : 类似于左右两个大括号的样式
 
 # table 的样式
-table: green_title
+table: black_title
 # 为空时类似github的table样式
 # green 绿色样式
 # green_title 头部为青色的table样式
