--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -67,7 +67,7 @@ menu:
       type: 3  # 跳转类型 3：打开新的tab页
 
 # 文末声明
-article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。可以在下面评论区评论，也可以邮件至 jaytp@qq.com
+article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。
 
 bottom_text: ©2023 Mhen
 # 自定义页面最下方的站点版权信息
@@ -244,8 +244,8 @@ gitalk:
 
 
 gitment:
-  owner: yelog
-  repo: yelog.github.io
+  owner: swag-lay
+  repo: swag-lay.github.io
   client_id:
   client_secret:
   # gitment : 通过github issue实现的评论系统
