--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -48,7 +48,7 @@ highlight:
 
 
 # Home page setting
-# path: Root path for your blogs index page. (default = '')
+path: /
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
